
    o nj() can now handle distances stored in long vectors. There was
      previously an implicit limit to 46,341 observations (see PR #97
      on GitHub).

    o del.gaps(), del.colgapsonly(), and del.rowgapsonly() now accepts
      objects of class "AAbin". Besides, the class of the input object
      is always respected (it used to be "DNAbin" only even when it
      had several elements).


BUG FIXES

    o rtt() was fixed when dates include NAs (issue #73 on GitHub).

    o njs(), bionj(), bionjs(), fastme.bal(), and fastme.ols() now
      check that there are least three observations in the distance
      matrix (issue #84 on GitHub).

    o nodelabels(, frame = "circle") used to ignore the argument
      'adj'. This is fixed (issue #85 on GitHub).

    o write.tree() ignored tree names. This bug was introduced in ape
      5.7 (see issue #101 on GitHub).

    o read.tree() now reads correctly trees with many nodes but a
      single tip such as "(());" (see issue #104 on GitHub).


OTHER CHANGES

    o .uncompressTipLabel() now returns an object of the same class
      than the input object (previously the returned object was always
      of class "multiPhylo").

    o The help page of is.binary() has been clarified that branch
      lengths are ignored (issue #83 on GitHub).

    o dist.nodes() has an improved internal C code with unlimited tree
      size. The code is three times faster with small trees; twice
      faster with ~1000 tips (the gain is less with bigger trees).



		CHANGES IN APE VERSION 5.7-1


BUG FIXES

    o Some very unbalanced trees resulted in a segfault (see issue #70
      on GitHub).


OTHER CHANGES

    o ape 5.7 introduced an implicit dependence on R >= 4.1. This has
      been corrected and this version should work with R >= 3.4 (and
      certainly with R >= 3.2).

    o All examples should now write files in the TMP directory (some
      still used to do this in the user's working directory).


