@@ -177,6 +177,7 @@ S3method(is.rooted, multiPhylo)
 S3method(is.ultrametric, multiPhylo)
 S3method(keep.tip, multiPhylo)
 S3method(makeLabel, multiPhylo)
+S3method(makeNodeLabel, multiPhylo)
 S3method(multi2di, multiPhylo)
 S3method(Nedge, multiPhylo)
 S3method(Nnode, multiPhylo)
@@ -205,6 +206,7 @@ S3method(is.rooted, phylo)
 S3method(is.ultrametric, phylo)
 S3method(keep.tip, phylo)
 S3method(makeLabel, phylo)
+S3method(makeNodeLabel, phylo)
 S3method(multi2di, phylo)
 S3method(Nedge, phylo)
 S3method(Nnode, phylo)
